tests/bad/using_void_expr.glaz
fn x() {}

fn main() {
  _ = x();
}
